Closed Bug 24948 Opened 25 years ago Closed 25 years ago

Wrong accentuated characters in Mac window titlebar

Categories

(Core :: Internationalization, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: pierre, Assigned: nhottanscp)

References

()

Details

Go to http://www.libe.fr/
==> The window title shows "LibÈration" (uppercase E + grave accent) instead of 
"Libération" (lowercase E + accute accent).
Maybe it's related to bug 23384.
Summary: Wrong accentuated characters in Mac window → Wrong accentuated characters in Mac window titlebar
Looks like conversion from ISO-8859-1 to MacRoman is needed.
lowercase e acute in ISO-8859-1 is 0xE9, uppercase E grave in MacRoman is also 
0xE9.
Status: NEW → ASSIGNED
Put M14 for now
Target Milestone: M14
We need to change this,

NS_IMETHODIMP nsMacWindow::SetTitle(const nsString& aTitle)
{
	Str255 title;
	title[0] = aTitle.Length();
	aTitle.ToCString((char*)title + 1, sizeof(title) - 1);
	::SetWTitle(mWindowPtr, title);
	return NS_OK;
}

Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I verfied this in 2000021008 Mac build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.