Added conversion from unicode to file systme charset, bug 24948, r=ftang.